--- a/react-family-ie8/index.html
+++ b/react-family-ie8/index.html
@@ -6,5 +6,5 @@
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="/app.6af2901e635f4199ee4d.js"></script></body>
+<script type="text/javascript" src="/react-family-ie8/app.da0eb927aea3fe995856.js"></script></body>
 </html>
