--- a/wedding-Invitations/index.html
+++ b/wedding-Invitations/index.html
@@ -1,10 +1,10 @@
 <!----------------------声明------------------------>
 <!--本作品创意及部分图片来源于“微请柬（http://www.wqingjian.com/）”网站，-->
-<!----------------如有侵权，请联系本人删除。QQ576679268---------------------->
-<!--------------------------------------------------------------------------->
-<!--------------------------------------------------------------------------->
-<!--------------------------------------------------------------------------->
-<!----------------------------------------------------------作者：金龙------->
+<!----------------如有侵权，请联系本人删除。QQ576679268------------------>
+<!------------------------------------------------------------------->
+<!------------------------------------------------------------------->
+<!------------------------------------------------------------------->
+<!----------------------------------------------------作者：金龙------->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,9 +19,9 @@
     <meta name='Keywords' content="樊金龙，王丹，结婚，请柬"/>
     <meta name="Description" content="樊金龙 ❤ 王丹的婚礼请柬，真诚的邀请各位参加我的婚礼。"/>
     <meta name="sharecontent"
-          data-msg-img="https://oj8k4m87h.bkt.clouddn.com/30f29caa9fd5939a787c385445d0a5a3.jpg"
+          data-msg-img="http://oj8k4m87h.bkt.clouddn.com/30f29caa9fd5939a787c385445d0a5a3.jpg"
           data-msg-title="樊金龙 ❤ 王丹的婚礼请柬" data-msg-content="真诚的邀请各位参加我的婚礼。" data-msg-callback=""
-          data-line-img="https://oj8k4m87h.bkt.clouddn.com/30f29caa9fd5939a787c385445d0a5a3.jpg"
+          data-line-img="http://oj8k4m87h.bkt.clouddn.com/30f29caa9fd5939a787c385445d0a5a3.jpg"
           data-line-title="樊金龙 ❤ 王丹的婚礼请柬" data-line-callback="">
     <script type="text/javascript">
         if (/Android (\d+\.\d+)/.test(navigator.userAgent)) {
@@ -49,34 +49,18 @@
         }
 
     </script>
-    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=gV7ZYQ4aBKBnO9qmONYD9Z1G"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=gV7ZYQ4aBKBnO9qmONYD9Z1G"></script>
     <script type="text/javascript"
-            src="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
-    <link rel="stylesheet" href="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css"/>
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<link href="https://oj8k4m87h.bkt.clouddn.com/main.48c46.chunk.css" rel="stylesheet"></head>
-<style>
-#app{
-            width:640px;
-            height:1040px;
-            -webkit-transform: scale(0.5);
-            -moz-transform: scale(0.5);
-            -ms-transform: scale(0.5);
-            transform: scale(0.5);
-            -webkit-transform-origin: left top;
-            -moz-transform-origin: left top;
-            -ms-transform-origin: left top;
-            transform-origin: left top;
-            margin:0 auto;
-            display:block;
-}
-</style>
+            src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css"/>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<link href="http://oj8k4m87h.bkt.clouddn.com/main.e4504.chunk.css" rel="stylesheet"></head>
 <body>
 <div id="app">
     <!-- 第一次初始加载提示 -->
     <div style="width:100%;">
-        <img style="width:100%;" src="https://oj8k4m87h.bkt.clouddn.com/loading.gif"/>
+        <img style="width:100%;" src="http://oj8k4m87h.bkt.clouddn.com/loading.gif"/>
     </div>
 </div>
-<script type="text/javascript" src="https://oj8k4m87h.bkt.clouddn.com/vendors.0fa52.chunk.js"></script><script type="text/javascript" src="https://oj8k4m87h.bkt.clouddn.com/main.1e31f.chunk.js"></script></body>
+<script type="text/javascript" src="http://oj8k4m87h.bkt.clouddn.com/vendors.7db70.chunk.js"></script><script type="text/javascript" src="http://oj8k4m87h.bkt.clouddn.com/main.e48f0.chunk.js"></script></body>
 </html>
