--- a/wedding-Invitations/index.html
+++ b/wedding-Invitations/index.html
@@ -19,9 +19,9 @@
     <meta name='Keywords' content="樊金龙，王丹，结婚，请柬"/>
     <meta name="Description" content="樊金龙 ❤ 王丹的婚礼请柬，真诚的邀请各位参加我的婚礼。"/>
     <meta name="sharecontent"
-          data-msg-img="http://oj8k4m87h.bkt.clouddn.com/30f29caa9fd5939a787c385445d0a5a3.jpg"
+          data-msg-img="https://brickspert.github.io/wedding-Invitations/30f29caa9fd5939a787c385445d0a5a3.jpg"
           data-msg-title="樊金龙 ❤ 王丹的婚礼请柬" data-msg-content="真诚的邀请各位参加我的婚礼。" data-msg-callback=""
-          data-line-img="http://oj8k4m87h.bkt.clouddn.com/30f29caa9fd5939a787c385445d0a5a3.jpg"
+          data-line-img="https://brickspert.github.io/wedding-Invitations/30f29caa9fd5939a787c385445d0a5a3.jpg"
           data-line-title="樊金龙 ❤ 王丹的婚礼请柬" data-line-callback="">
     <script type="text/javascript">
         if (/Android (\d+\.\d+)/.test(navigator.userAgent)) {
@@ -49,17 +49,17 @@
         }
 
     </script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=gV7ZYQ4aBKBnO9qmONYD9Z1G"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=gV7ZYQ4aBKBnO9qmONYD9Z1G"></script>
     <script type="text/javascript"
-            src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
-    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css"/>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+            src="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+    <link rel="stylesheet" href="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css"/>
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <link href="/wedding-Invitations/main.b098d.chunk.css" rel="stylesheet"></head>
 <body>
 <div id="app">
     <!-- 第一次初始加载提示 -->
     <div style="width:100%;">
-        <img style="width:100%;" src="http://oj8k4m87h.bkt.clouddn.com/loading.gif"/>
+        <img style="width:100%;" src="https://brickspert.github.io/wedding-Invitations/loading.gif"/>
     </div>
 </div>
 <script type="text/javascript" src="/wedding-Invitations/vendors.ca0b0.chunk.js"></script><script type="text/javascript" src="/wedding-Invitations/main.005f9.chunk.js"></script></body>
